--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="holder">
+
     <div class="container">
 
         <div id="advert">
@@ -41,7 +43,12 @@
 
         
     </div>
+    <div id="result">
+        <div>f
 
+        </div>
+    </div>
+    </div>
     
 </body>
 </html>
