--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div id="container-box">
     
-            <div class="sign" id="revenue">ARR</div>
+            <div class="sign" id="revenue"><span>ARR</span></div>
             <input class="info" id="revenue-input" type="number" placeholder="Annual Recurring Revenue" required>
             
         </div>
