--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
 <body>
     <div id="nav">
         <div id="sitelogo">
-          <img
-            src="https://upload.wikimedia.org/wikipedia/commons/2/20/Adidas_Logo.svg"
-            alt="Adidas Logo"
-          />
+            <ion-icon class="calculator-outline" name="calculator-outline"></ion-icon>
         </div>
         <div id="links">
           <ul>
@@ -63,10 +60,12 @@
         
     </div>
     <div id="result">
+        <ion-icon class="calculator-outline-2" name="calculator-outline"></ion-icon>
         <p> According to our SaaS valuation method which consists of the fromula ARR x Growth Rate x 10 x Renewal rate, the valuation of your product is $<span id="results"></span> </p>
     </div>
     </div>
-    
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
 
